--- a/item.css
+++ b/item.css
@@ -33,9 +33,11 @@
 }
 
 .enable {
-    padding: 4px;
+    margin: 4px;
+    padding: 8px;
     color: rgb(30, 215, 98);
     background-color: rgb(243, 243, 243);
+    border-radius: 5px;
 }
 
 .disable {
@@ -46,8 +48,8 @@
     margin: 10px;
     align-self: center;
     background-color: rgb(255, 98, 140);
-    width:  48px;
-    height: 24px;
+    width:  46px;
+    height: 22px;
     border-radius: 40px;
     cursor: pointer;
     position: relative;
@@ -58,8 +60,8 @@
     position: absolute;
     content: '';
     background-color: #fff;
-    width: 20px;
-    height: 20px;
+    width: 18px;
+    height: 18px;
     border-radius: 50%;
     margin: 2px;
     transition: 0.2s;
@@ -71,6 +73,11 @@ input:checked + .enableBtn {
 input:checked + .enableBtn::before {
     transform: translateX(24px);
 }
-#enableBtn {
+#contactMedias, #skypeEnable, #messengerEnable, #telegramEnable,
+#whatsAppEnable, #appleBusinessEnable, #emailEnable, #animationEnable {
     display: none;
+}
+
+.enableContainer {
+    display: flex;
 }
