--- a/item.css
+++ b/item.css
@@ -15,6 +15,7 @@
     padding: 16px;
     background-color: rgb(243, 243, 243);
 }
+
 #generatorBtn {
     background-color: rgb(30, 215, 98);
     border: none;
@@ -22,6 +23,7 @@
     color: white;
     border-radius: 2px;
 }
+
 #generatorBtn:hover {
     background-color: rgb(60, 245, 128);
     cursor: pointer;
@@ -48,7 +50,7 @@
     margin: 10px;
     align-self: center;
     background-color: rgb(255, 98, 140);
-    width:  46px;
+    width: 46px;
     height: 22px;
     border-radius: 40px;
     cursor: pointer;
@@ -67,14 +69,26 @@
     transition: 0.2s;
 }
 
-input:checked + .enableBtn {
-    background-color:  rgb(30, 215, 98);
+input:checked+.enableBtn {
+    background-color: rgb(30, 215, 98);
 }
-input:checked + .enableBtn::before {
+
+input:checked+.enableBtn::before {
     transform: translateX(24px);
 }
-#contactMedias, #skypeEnable, #messengerEnable, #telegramEnable,
-#whatsAppEnable, #appleBusinessEnable, #emailEnable, #animationEnable {
+
+#contactMedias,
+#skypeEnable,
+#messengerEnable,
+#telegramEnable,
+#whatsAppEnable,
+#appleBusinessEnable,
+#emailEnable,
+#animationEnable,
+#defaultFieldsEnableNAME,
+#defaultFieldsEnablePHONE,
+#defaultFieldsEnableCPF,
+#defaultFieldsEnableEMAIL {
     display: none;
 }
 
