--- a/template.css
+++ b/template.css
@@ -2,20 +2,20 @@ p {
     padding: 0;
     margin: 0;
 }
-.text-detail {
 
-}
+.text-detail {}
 
 .message-body {
     display: flex;
-    
+
 }
 
 .message-content {
     background-color: aqua;
     width: 200px;
     height: 100px;
-    border-radius: 5px;
+    border-radius: 15px;
+    border-bottom: 5px solid rgb(0, 195, 195);
     margin: 10px 0px 10px 0px;
     padding: 0px 25px 0px 25px;
 }
